--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,7 +8,13 @@ body,
 
 /* Message.js */
 .messages {
-  height: 440px;
+  height: 70vh;
+  overflow-y: scroll;
+  /* padding-bottom: 120px; */
+}
+
+.messages__progress {
+  height: 65vh;
   overflow-y: scroll;
 }
 
@@ -19,9 +25,12 @@ body,
   margin-left: 320px !important;
   left: 0;
   right: 1em;
+  opacity: 0.7;
   z-index: 200;
 }
-
+.message__form:hover {
+  opacity: 1;
+}
 /* Message.js */
 .message__self {
   border-left: 2px solid orange;
@@ -29,4 +38,9 @@ body,
 }
 .message__image {
   padding: 1em;
+}
+
+/* ProgressBar.js */
+.progress__bar {
+  margin: 0.3em 0 0 0 !important;
 }
